--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "object-map",
+  "name": "property-map",
   "version": "0.0.1",
   "description": "Apply a given function to each property of an object",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/angus-c/object-map.git"
+    "url": "git+https://github.com/angus-c/property-map.git"
   },
   "keywords": [
     "object",
@@ -18,9 +18,9 @@
   "author": "Angus Croll",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/angus-c/object-map/issues"
+    "url": "https://github.com/angus-c/property-map/issues"
   },
-  "homepage": "https://github.com/angus-c/object-map#readme",
+  "homepage": "https://github.com/angus-c/property-map#readme",
   "dependencies": {
     "chai": "^3.4.1",
     "mocha": "^2.3.3"
